<resources>
    <string name="app_name">Fish Tracker</string>

    <string name="missing_label">Missing Label!!</string>
    <string name="trips_label">Trips</string>
    <string name="trip_detail_label">Trip Detail</string>
    <string name="fish_list_label">Fish</string>
    <string name="fish_detail_label">Fish Detail</string>
    <string name="remote_control_config_label">Remote Control</string>

    <string name="new_trip">New Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="caught_fish">Caught Fish</string>

    <string name="trips_list_element_text"></string>

    <string name="trips_menu_resume_label">Resume...</string>
    <string name="trips_menu_delete_label">Delete...</string>

    <string name="detail_start_label">Trip Start:</string>
    <string name="detail_end_label">Trip End:</string>
    <string name="detail_location_label">Location:</string>
    <string name="detail_lake_level_label">Level:</string>
    <string name="detail_air_temp_label">Air Temp:</string>
    <string name="detail_enable_temp_tracking">Track</string>
    <string name="detail_water_temp_label">Water Temp:</string>
    <string name="detail_wind_label">Wind:</string>
    <string name="detail_precip_label">Precipitation:</string>
    <string name="detail_notes_label">Notes:</string>
    <string name="detail_audio_notes_label">Audio Notes:</string>
    <string name="detail_add_audio_note_label">Add...</string>
    <string name="detail_play_audio_note_label">Play</string>
    <string name="detail_edit_audio_note_label">Edit...</string>
    <string name="fish_detail_species_label">Species:</string>
    <string name="fish_detail_length_label">Length:</string>
    <string name="fish_detail_weight_label">Weight:</string>
    <string name="fish_detail_caught_label">When Caught:</string>
    <string name="fish_detail_lure_label">Lure:</string>
    <string name="fish_detail_lure_size_label">Size:</string>
    <string name="fish_detail_landed_label">Landed?</string>
    <string name="fish_detail_notes_label">Notes:</string>
    <string name="fish_detail_audio_notes_label">Audio Notes:</string>
    <string name="fish_detail_play_audio_note_label">Play</string>
    <string name="fish_detail_edit_audio_note_label">Edit...</string>
    <string name="fish_detail_add_audio_note_label">Add...</string>
    <string name="fish_detail_air_temp_label">Air Temp:</string>
    <string name="fish_detail_water_temp_label">Water Temp:</string>
    <string name="fish_detail_water_depth_label">Water Depth:</string>
    <string name="fish_detail_wind_label">Wind:</string>
    <string name="fish_detail_precip_label">Precipitation:</string>
    <string name="fish_detail_gps_loc_label">GPS:</string>
    <string name="fish_detail_cover_label">Cover:</string>
    <string name="fish_detail_lure_color_label">Color:</string>
    <string name="remote_control_config_title">Remote Control Config</string>
    <string name="remote_control_config_devices_label">"All Devices: "</string>
    <string name="remote_control_config_scan_label">Scan</string>
    <string name="remote_control_config_cancel_scan_label">Cancel Scan</string>
    <string name="remote_control_config_connect_label">Connect</string>
    <string name="remote_control_connected_device_label">Connected Device: </string>
</resources>
