<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header -->
            <TextView
                android:id="@+id/remote_control_config_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/remote_control_config_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkBackgroundBand">

                <TextView
                    android:id="@+id/remote_control_config_bt_status_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="Bluetooth status unknown..."
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/remote_control_config_devices_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/remote_control_config_devices_label"
                    android:textColor="@color/field_label_color"
                    android:textSize="@dimen/field_label_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remote_control_config_bt_status_message" />

                <Spinner
                    android:id="@+id/remote_control_config_devices_list"
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    app:layout_constraintEnd_toStartOf="@+id/remote_control_config_connect_button"
                    app:layout_constraintStart_toStartOf="@+id/remote_control_config_devices_label"
                    app:layout_constraintTop_toBottomOf="@+id/remote_control_config_devices_label" />

                <Button
                    android:id="@+id/remote_control_config_connect_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/remote_control_config_connect_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/remote_control_config_devices_list"
                    app:layout_constraintTop_toTopOf="@+id/remote_control_config_devices_list" />

                <TextView
                    android:id="@+id/remote_control_connected_device_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/remote_control_connected_device_label"
                    android:textColor="@color/field_label_color"
                    android:textSize="@dimen/field_label_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/remote_control_config_devices_label"
                    app:layout_constraintTop_toBottomOf="@+id/remote_control_config_devices_list" />

                <TextView
                    android:id="@+id/remote_control_connected_device"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:text="NONE"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/field_value_size"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/remote_control_connected_device_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/remote_control_connected_device_label"
                    app:layout_constraintTop_toTopOf="@+id/remote_control_connected_device_label" />

                <Button
                    android:id="@+id/remote_control_config_scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/remote_control_config_scan_label"
                    app:layout_constraintStart_toStartOf="@+id/remote_control_config_devices_label"
                    app:layout_constraintTop_toBottomOf="@+id/remote_control_connected_device_label" />

                <TextView
                    android:id="@+id/remote_control_config_bt_scan_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/remote_control_config_scan_button"
                    app:layout_constraintTop_toTopOf="@+id/remote_control_config_scan_button" />

                <EditText
                    android:id="@+id/remote_control_config_notes_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remote_control_config_scan_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>